    (krakjoe)

- intl:
  . Fixed bug #74433 (wrong reflection for Normalizer methods). (villfa)
  . Fixed bug #74439 (wrong reflection for Locale methods). (villfa)

- MySQLnd:
  . Added support for MySQL 8.0 types. (Johannes)
  . Fixed bug #74376 (Invalid free of persistent results on error/connection
    loss). (Yussuf Khalil)

- OpenSSL:
  . Fixed bug #73711 (Segfault in openssl_pkey_new when generating DSA or DH
    key). (Jakub Zelenka)
  . Fixed bug #74341 (openssl_x509_parse fails to parse ASN.1 UTCTime without
    seconds). (Moritz Fain)
  . Added OpenSSL 1.1.0 support. (Jakub Zelenka)

- phar:
  . Fixed bug #74383 (phar method parameters reflection correction). 
    (mhagstrand)

- Standard:
  . Fixed bug #74409 (Reflection information for ini_get_all() is incomplete).
    (Sebastian Bergmann)
  . Fixed bug #72071 (setcookie allows max-age to be negative). (Craig Duncan)

- SQLite3:
  . Fixed bug #74413 (incorrect reflection for SQLite3::enableExceptions).
    (krakjoe)

13 Apr 2017 PHP 7.0.18

- Core:
  . Fixed bug #73370 (falsely exits with "Out of Memory" when using
    USE_ZEND_ALLOC=0). (Nikita)
  . Fixed bug #73960 (Leak with instance method calling static method with
    referenced return). (Nikita)
  . Fixed bug #74265 (Build problems after 7.0.17 release: undefined reference
    to `isfinite'). (Nikita)
  . Fixed bug #74302 (yield fromLABEL is over-greedy). (Sara)

- Apache:
  . Reverted patch for bug #61471, fixes bug #74318. (Anatol)

- Date:
  . Fixed bug #72096 (Swatch time value incorrect for dates before 1970). (mcq8)

- DOM:
  . Fixed bug #74004 (LIBXML_NOWARNING flag ingnored on loadHTML*).
    (somedaysummer)

- iconv:
  . Fixed bug #74230 (iconv fails to fail on surrogates). (Anatol)

- OCI8:
  . Fixed uninitialized data causing random crash. (Dmitry)

- OpenSSL:
  . Fixed bug #72333 (fwrite() on non-blocking SSL sockets doesn't work).
    (Jakub Zelenka)

- PDO MySQL: